--- a/indice.html
+++ b/indice.html
@@ -9,8 +9,12 @@
 <body>
         <section>
             <video
-            controls
-          >
+            controls poster="https://cdn.videvo.net/videvo_files/video/premium/video0036/thumbnails/computer_code00_small.jpg"
+            >
+              <source
+                type="video/webm"
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
+              />
             <source
               type="video/mp4"
               src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
@@ -18,4 +22,4 @@
           </video>
         </section> 
 </body>
-</html>
+</html> 
